Added a new arada waveserver version that encapsulates XIA packets inside UDP/IP packets (and not WSMs like the regular version).

--- a/arada/Makefile
+++ b/arada/Makefile
@@ -1,6 +1,7 @@
 all:
 ifneq ($(wildcard /opt/buildroot-2013.11/.),) # no wave
 	make -C waveserver
+	make -C waveserverip
 else
 	@echo "Did not find WAVE directory"
 endif
@@ -9,3 +10,4 @@ static: all
 
 clean:
 	make -C waveserver clean
+	make -C waveserverip clean
