Ignore waveserverip executable.
This is the IP over DSRC implementation that Rui is working on.

--- a/.gitignore
+++ b/.gitignore
@@ -127,6 +127,7 @@ example/xcmpping
 example/xcmptraceroute
 example/xecho
 arada/waveserver/waveserver
+arada/waveserverip/waveserverip
 
 # output from scripts
 etc/click/host*.click
